# MAKEATHON

./: .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeOfConduct.md  Pipfile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
Makeathon3077/: asgi.py  settings.py  urls.py  wsgi.py
Makeathon3077/settings/: base.py  dev.py  prod.py
getyourbadge/: admin.py  apps.py  models.py  urls.py  views.py
getyourbadge/migrations/: 0001_initial.py
getyourbadge/templates/getyourbadge/: index.html
staticfiles/webpages/home/css/: style.css
staticfiles/webpages/home/js/: index.js
staticfiles/webpages/loader/: style.css  style.prefixed.css
staticfiles/website/about/css/: style.css
staticfiles/website/faq/js/: index.js
staticfiles/website/home/js/: index.js
staticfiles/website/speakers_and_judges/css/: style.css
staticfiles/website/speakers_and_judges/js/: index.js
staticfiles/website/timeline/css/: style.css
templates/: Sponsors.rar
templates/About/: index.html
templates/About_MLSC/: index.html
templates/FAQ/: index.html
templates/Home/: index.html
templates/Prizes/: index.html
templates/Prizes 2/: carousel.html  index.html
templates/Speakers_and_Judges/: index.html
templates/Sponsors/: index.html
templates/Timeline/: index.html
templates/Tracks/: index.html  tracks.html
tests/: test_urls.py  test_views.py
webpages/: apps.py  urls.py  views.py
webpages/templates/webpages/: index.html
website/: urls.py  views.py
website/templates/website/: index.html
(+98 files in other folders)
